--- a/src/style.css
+++ b/src/style.css
@@ -1,47 +1,24 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
 body {
-  background-color: green;
+  background: green;
 }
 
-.card {
-  width: 300px;
-  height: 450px;
-  border-radius: 25px;
-  margin: auto;
-  margin-top: 250px;
-  background-color: white;
-  display: flex;
-}
-
-.headCard {
-  padding-top: 0px;
-  margin-bottom: 10px;
+.container {
+  width: 22rem;
+  height: 35rem;
+  background: white;
+  border-radius: 1rem;
 }
 
 .palo {
-  font-size: 90px;
-  padding-left: 5px;
-  position: absolute;
-  top: 0;
+  font-size: 6rem;
+  position: relative;
 }
 
-.palo2 {
-  font-size: 90px;
-  float: right;
+.palo_Down {
+  transform: rotate(180deg);
 }
 
-.centerCard {
-  font-size: 150px;
-  text-align: center;
-}
-
-.centerCard p {
-  margin-top: 10px;
-  margin-bottom: 15px;
-}
-
-.bottomCard {
-  padding-right: 10px;
-  font-size: 95px;
-  margin: 5px;
+.number_size {
+  font-size: 11rem;
 }
